<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        style="@style/BottomSheetMenu" >
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_order_menu_title"
                style="@style/OptionMenuTitle"/>
        <com.jurajkusnier.googletasks.ui.components.CheckOptionItem
                android:id="@+id/my_order_option"
                android:paddingStart="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:text="@string/task_order_menu_my_order" />
        <com.jurajkusnier.googletasks.ui.components.CheckOptionItem
                android:id="@+id/order_by_due_date_option"
                android:paddingStart="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:text="@string/task_order_menu_by_due_date" />
        <View style="@style/DividerStyle"
              android:layout_marginTop="16dp"
              android:layout_marginBottom="16dp" />
        <TextView
                style="@style/OptionItem"
                android:id="@+id/rename_list_option"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_list" />
        <TextView
                style="@style/OptionItem"
                android:id="@+id/delete_list_option"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_list" />
        <TextView
                style="@style/OptionItem"
                android:id="@+id/delete_all_completed_tasks_option"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_all_completed_tasks" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>